change promotion module
